# M4AGO-sinking-scheme

./: .gitignore  README.md
driver/: M4AGO_driver.F90  Makefile  meson.build  mo_driver_routines.f90  nml
driver/testing/: M4AGO_driver.F90  Makefile  meson.build  meson_options.txt  nml
driver/tests/: meson.build
py/molecular_viscosity/: mol_dyn_vis.py  test_mol_dyn_vis.py
src/: mo_ihamocc4m4ago.f90  mo_m4ago_HAMOCCPrimPart.F90  mo_m4ago_HAMOCCinit.F90  mo_m4ago_climberx.f90  mo_m4ago_control.f90  mo_m4ago_core.f90  mo_m4ago_kind.F90  mo_m4ago_params.f90  mo_m4ago_physics.f90  mo_m4ago_types.f90
